tests/locals/locals.exp
Error: lex.js:11
 11:   (b : string); // error: number ~> string
        ^ Cannot cast `b` to string because number [1] is incompatible with string [2].
  References:
    8:       b = 0;
                 ^ [1]: number
   11:   (b : string); // error: number ~> string
              ^^^^^^ [2]: string

Error: lex.js:26
 26:   (b : string); // error: number ~> string
        ^ Cannot cast `b` to string because number [1] is incompatible with string [2].
  References:
   23:     b = 0;
               ^ [1]: number
   26:   (b : string); // error: number ~> string
              ^^^^^^ [2]: string

Error: lex.js:37
 37:   (b : string); // error: number ~> string
        ^ Cannot cast `b` to string because number [1] is incompatible with string [2].
  References:
   34:     b = 0;
               ^ [1]: number
   37:   (b : string); // error: number ~> string
              ^^^^^^ [2]: string

Error: lex.js:48
 48:   (b : number); // error: string ~> number
        ^ Cannot cast `b` to number because string [1] is incompatible with number [2].
  References:
   45:     b = "";
               ^^ [1]: string
   48:   (b : number); // error: string ~> number
              ^^^^^^ [2]: number

Error: lex.js:59
 59:   (b : string); // error: number ~> string
        ^ Cannot cast `b` to string because number [1] is incompatible with string [2].
  References:
   56:     b = 0;
               ^ [1]: number
   59:   (b : string); // error: number ~> string
              ^^^^^^ [2]: string

Error: locals.js:1
  1: var x:string = 0;
                    ^ number. This type is incompatible with
  1: var x:string = 0;
           ^^^^^^ string

Error: locals.js:2
  2: var x:number = 1;
           ^^^^^^ number [1] is incompatible with string [2].
  References:
    2: var x:number = 1;
             ^^^^^^ [1]: number
    1: var x:string = 0;
             ^^^^^^ [2]: string

Error: locals.js:2
  2: var x:number = 1;
                    ^ number. This type is incompatible with
  1: var x:string = 0;
           ^^^^^^ string

Error: locals.js:12
 12:         var x: bool = true;
                    ^^^^ boolean. This type is incompatible with
 10:         var x: number | string = 1337;
                    ^^^^^^^^^^^^^^^ union: number | string
  Member 1:
   10:         var x: number | string = 1337;
                      ^^^^^^ number
  Error:
   12:         var x: bool = true;
                      ^^^^ boolean. This type is incompatible with
   10:         var x: number | string = 1337;
                      ^^^^^^ number
  Member 2:
   10:         var x: number | string = 1337;
                               ^^^^^^ string
  Error:
   12:         var x: bool = true;
                      ^^^^ boolean. This type is incompatible with
   10:         var x: number | string = 1337;
                               ^^^^^^ string

Error: locals.js:12
 12:         var x: bool = true;
                    ^^^^ boolean [1] is incompatible with number [2].
  References:
   12:         var x: bool = true;
                      ^^^^ [1]: boolean
   10:         var x: number | string = 1337;
                      ^^^^^^ [2]: number

Error: locals.js:12
 12:         var x: bool = true;
                    ^^^^ boolean [1] is incompatible with string [2].
  References:
   12:         var x: bool = true;
                      ^^^^ [1]: boolean
   10:         var x: number | string = 1337;
                               ^^^^^^ [2]: string

Error: locals.js:12
 12:         var x: bool = true;
                           ^^^^ boolean. This type is incompatible with
 10:         var x: number | string = 1337;
                    ^^^^^^^^^^^^^^^ union: number | string
  Member 1:
   10:         var x: number | string = 1337;
                      ^^^^^^ number
  Error:
   12:         var x: bool = true;
                             ^^^^ boolean. This type is incompatible with
   10:         var x: number | string = 1337;
                      ^^^^^^ number
  Member 2:
   10:         var x: number | string = 1337;
                               ^^^^^^ string
  Error:
   12:         var x: bool = true;
                             ^^^^ boolean. This type is incompatible with
   10:         var x: number | string = 1337;
                               ^^^^^^ string

Error: locals.js:14
 14:     foo(x);
             ^ number. This type is incompatible with the expected param type of
  6: function foo(p: bool) {}
                     ^^^^ boolean

Error: locals.js:14
 14:     foo(x);
             ^ string. This type is incompatible with the expected param type of
  6: function foo(p: bool) {}
                     ^^^^ boolean

Error: locals.js:22
 22:   return x;
              ^ string. This type is incompatible with the expected return type of
 17: function foo0(b: bool): number {
                             ^^^^^^ number


Found 15 errors
